test/Fail/Issue5468.err
Issue5468.agda:33.1-12: error: [UnusableAtModality]
This clause has target type A which is not usable at the required
modality @ω.

Note: in Cubical Agda, the target type must be usable at the
modality in which the function was defined, since it will be used
for computing transports

when checking that the pattern [ x ] has type Box A
